--- a/calculadora.html
+++ b/calculadora.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Teclado | HCS </title>
+    <title> Calculadora | HCS </title>
 </head>
 <style>
     :root{
@@ -115,7 +115,7 @@
 </style>
 <body>
     <div class="div1">
-        <h1> Teclado de números | HCS </h1>
+        <h1> Calculadora | HCS </h1>
         <br>
         <p id="p">  </p>
     </div>
