--- a/calculadora.html
+++ b/calculadora.html
@@ -89,8 +89,8 @@
         border-radius: 10px;
         color: var(--white);
         background-color: var(--black);
-        height: 50px; /* Ajustei a altura para ficar consistente com os outros botões */
-        width: 50px;  /* Ajustei a largura para ser igual aos outros */
+        height: 50px; 
+        width: 50px;
         margin: 5px;
         cursor: pointer;
     }
