--- a/formulario-modo-DL.html
+++ b/formulario-modo-DL.html
@@ -92,7 +92,7 @@
         padding: 5px;
         border: none;
         border-bottom: solid 1.3px dodgerblue;
-        color: black;
+        color: gray;
         outline: none;
     }
 
